# aimethods

./: README.md  backtest.py  backtest_adapters.py  dataloader.py  genetic.py  hybrid.py  lstm.py  lstm_pyopt.py  pso.py  pyproject.toml  requirements.txt
data/: constituents.csv  snp100_index.csv
neuralmethods/: main.py  make_dataset.py  results.py  tcn_backtest.py
neuralmethods/config/: config.json  tcn_backtest.json
neuralmethods/model/: tcn.py
neuralmethods/result/: best_model_weight_hb.pt
results/: EWP_results.pkl  GA_results.pkl  LSTM_PyOpt_results.pkl  PSO_results.pkl  TCN_results.pkl  tcn_best_model_weight_hb.pt
tcn/: tcn_backtest.py
tcn/config/: tcn_backtest.json  train_config.json
tcn/model/: loss.py  transformer.py
tcn/result/: backtest.csv
tcn/train/: train.py  utils.py
