[project]
name = "aimethods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pyportfolioopt>=1.5.6",
    "pyqt6>=6.9.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "yfinance>=0.2.55",
]
